Fixed FIle location according to repository

--- a/MinevsRock.ipynb
+++ b/MinevsRock.ipynb
@@ -62,7 +62,7 @@
       "cell_type": "code",
       "source": [
         "#Loading the dataset\n",
-        "sonar_data=pd.read_csv('sonar.csv', header=None)"
+        "sonar_data=pd.read_csv('Datasets/sonar.csv', header=None)"
       ],
       "metadata": {
         "id": "QeSJOFmB1q9j"
